# lawndbproject

./: .gitignore  README.md  app.py  auth.py  database.py  db_repl.py  fakes.py  lawn_database.db  main.py  pyproject.toml  query.py  schema.py  scripts.py  ui.py  ui_base.py  util.py
custom_notifications/: LICENSE  notification_manager.py  notification_panel.py  notification_type.py
static/: create_tables.sql  drop_tables.sql
