[project]
name = "source"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "dateparser>=1.2.2",
    "faker>=37.5.3",
    "pydantic[email]>=2.11.7",
    "pydantic-extra-types>=2.10.5",
    "pyside6>=6.9.1",
    "pyside6-essentials>=6.9.1",
    "pyedifice>=4.3.0",
    "fpdf>=1.7.2",
]
